--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,10 @@
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
-
+div {
+  height:100%;
+  width:100%;
+}
 .App-header {
   background-color: #222;
   height: 150px;
