--- a/src/layouts/MainPageLayout/MainPageLayout.css
+++ b/src/layouts/MainPageLayout/MainPageLayout.css
@@ -1,13 +1,25 @@
 #menu-layout-content .logo {
-    width: 120px;
+    width: 150px;
     height: 31px;
     font-size: 20px;
+    font-family: Avenir;
+    font-weight: 600;
+    padding-right: 0.5em;
     /* background: rgba(253, 158, 158, 0.2);   */
     /*margin: 16px 24px 16px 0; */
     float: left;
 }
 #menu-layout-content .ant-layout-header {
     background: rgba(255, 255, 255, 1)
+}
+#menu-layout-content .fixed {
+    position: fixed;
+    width:100%;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    right: auto;
+    bottom: auto;
 }
 #menu-layout-content #content{
     padding: 50px;
@@ -17,6 +29,7 @@
     display: flex;
     flex-direction: row;
     align-items: stretch;
+    margin-top: 2em;
     min-height: 40em;
     /* height: 500px; */
 }
